[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/characters/enemy2/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://resource/sprites/characters/PrinceRanger (1).png" type="Texture" id=2]
[ext_resource path="res://src/objects/Arrow/Arrow.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 5
script = ExtResource( 1 )
fire_rate = 0.5
arrow = ExtResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -10, -20, 20, 40 )
process_parent = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ArrowPos" type="Position2D" parent="."]
position = Vector2( 25, -10 )

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="VisibilityShape" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Visibility" to="." method="_on_Visibility_area_entered"]
[connection signal="area_exited" from="Visibility" to="." method="_on_Visibility_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
